--- a/app/views/lecture/edit.html.erb
+++ b/app/views/lecture/edit.html.erb
@@ -1,5 +1,15 @@
 <div class="span9">
-	awopdjawd
+
+	<div class="span10 mainColumn" id="mainColumn">
+		<div class="pView">
+			
+		</div>
+		<div class="row-fluid">
+			<div class="taContainer span8 fixedBottom">
+				<textarea id="textbox"class="noresize span12"></textarea>
+			</div>
+		</div>
+	</div>
 </div>
 
 <div class="span3">
