--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,18 @@
  *= require_self
  *= require_tree .
  */
+
+
+.pdf-canvas{
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.4);
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.sidebar-scrollable{
+	height: 400px;
+	overflow-y: scroll;
+	overflow-x: hidden;
+	padding-left: 10%;
+}
+
