--- a/app/views/lecture/edit.html.erb
+++ b/app/views/lecture/edit.html.erb
@@ -2,7 +2,16 @@
 
 	<div class="span10 mainColumn" id="mainColumn">
 		<div class="pView">
-			
+			<% @note.paragraphs.each do |e| %>
+			<div class="row-fluid">
+				<div class="span1 dateMark">
+					<%= e.timestamp.strftime "%H:%M" %>
+				</div>
+				<div class="span11 pText">
+					<%= e.text %>
+				</div>
+			</div>
+			<% end %>
 		</div>
 		<div class="row-fluid">
 			<div class="taContainer span8 fixedBottom">
@@ -15,3 +24,7 @@
 <div class="span3">
 	dawdawod
 </div>
+
+<script>
+	var noteId = "<%= @note.id %>";
+</script>
