--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
 
 
 .pdf-canvas{
-	box-shadow: 0px 0px 10px rgba(0,0,0,0.4);
+	box-shadow: 0 0 10px rgba(0,0,0,0.4);
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
