--- a/app/views/lecture/view.html.erb
+++ b/app/views/lecture/view.html.erb
@@ -1,2 +1,17 @@
-<h1>Lecture#view</h1>
-<p>Find me in app/views/lecture/view.html.erb</p>
+<script>
+var myNote = "<%= @mine.id %>";
+var otherNOtes = <%= @others.map { |x| x.id } %>;
+</script>
+
+<div class="row-fluid">
+		<div class="span6 centerdrop">
+		</div>
+</div>
+
+<div class="row-fluid">
+	<div class="span6">
+	</div>
+
+	<div class="span6">
+	</div>
+</div>
