--- a/app/views/lecture/view.html.erb
+++ b/app/views/lecture/view.html.erb
@@ -4,14 +4,37 @@ var otherNOtes = <%= @others.map { |x| x.id } %>;
 </script>
 
 <div class="row-fluid">
-		<div class="span6 centerdrop">
+		<div class="span6">
+			<div class="dropdown centerdrop">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#" id="ddA">Mine</a>
+			</div>
+		</div>
+
+		<div class="span6">
+			<div class="dropdown centerdrop">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#" id="ddB"></a>
+			</div>
 		</div>
 </div>
 
 <div class="row-fluid">
 	<div class="span6">
+		<div class="pView" id="noteA">
+			<% @mine.paragraphs.each do |e| %>
+			<div class="row-fluid">
+				<div class="span1 dateMark">
+					<%= e.timestamp.strftime "%H:%M" %>
+				</div>
+				<div class="span11 pText">
+					<%= e.text %>
+				</div>
+			</div>
+			<% end %>
+		</div>
 	</div>
 
 	<div class="span6">
+		<div class="pView" id="noteB">
+		</div>
 	</div>
 </div>
