--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
 		<div class="navbar-inner navbar-fixed-top" style="border-radius: 0px;">
 			<a class="brand" href="#">NoteSync</a>
 			<ul class="nav">
-				<li><a href="<%= lecture_create_path %>">create</a></li>
+				<li><a href="<%= lecture_list_path %>">Lectures</a></li>
+				<li><a href="<%= lecture_create_path %>">Create</a></li>
 			</ul>
 		</div>
 	</div>
