--- a/app/views/note/edit.html.erb
+++ b/app/views/note/edit.html.erb
@@ -29,4 +29,8 @@
 
 <script>
 	var noteId = "<%= @note.id %>";
+	$(function(){
+		var docView = DocumentViewer($("#sidebar-documents-viewer"));
+		docView.loadPdf("/pdfs/example.pdf");
+	});
 </script>
