--- a/app/views/lecture/edit.html.erb
+++ b/app/views/lecture/edit.html.erb
@@ -1,5 +1,10 @@
 	<div class="span12" style="min-height: 40px"></div>
 </div>
+
+<div class="row-fluid">
+	<div class="span2"><a href="<%= lecture_view_path(@lecture) %>">View this lecture...</a></div>
+</div>
+
 <div class="row-fluid">
 	<div class="span6 well">
 		<h2>Notes</h2>
