--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 			<a class="brand" href="#">NoteSync</a>
 			<ul class="nav">
 				<li><a href="<%= lecture_list_path %>">Lectures</a></li>
-				<li><a href="<%= lecture_create_path %>">Create</a></li>
+				<li><a href="<%= lecture_new_path %>">Create</a></li>
 			</ul>
 		</div>
 	</div>
