--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,11 @@
 		</div>
 	</div>
 
-	<div class="container-fluid" style="padding-top: 22px;">
+	<div class="container-fluid" style="margin-top: 50px;">
 		<% if flash[:error] %>
-			<div class="alert alert-error"><%= flash[:error] %></div>
+			<div class="row-fluid">
+				<div class="span8 offset2 alert alert-error"><%= flash[:error] %></div>
+			</div>
 		<% end %>
 		<div class="row-fluid">
 
