--- a/app/views/lecture/edit.html.erb
+++ b/app/views/lecture/edit.html.erb
@@ -1,7 +1,4 @@
-	<div class="span12" style="min-height: 40px"></div>
-</div>
 
-<div class="row-fluid">
 	<div class="span2"><a href="<%= lecture_view_path(@lecture) %>">View this lecture...</a></div>
 </div>
 
@@ -21,4 +18,19 @@
 	</div>
 	<div class="span2 well">
 		<h2>Users</h2>
+		<ul>
+			<% @lecture.users.each do |u| %>
+				<li><%= u.nick %></li>
+			<% end %>
+		</ul>
+
+		<%= form_for User.new, :url => lecture_addUser_path(@lecture) do |f| %>
+
+			<p>Add user to lecture:</p>
+			<%= f.text_field :nick, :placeholder => "nick", :class => "input-small" %>
+			<%= f.submit "add", :class => "btn btn-success" %> 
+
+		<% end %>
+
+
 	</div>
