--- a/app/views/lecture/view.html.erb
+++ b/app/views/lecture/view.html.erb
@@ -1,8 +1,8 @@
 <script>
 <% if @mine %>
-var myNote = "<%= @mine.id %>";
+var myNote = "<%= h @mine.id %>";
 <% end %>
-var otherNotes = <%= @others %>;
+var otherNotes = <%= @others.to_json.html_safe %>;
 
 $(noteViewReady);
 
@@ -20,7 +20,7 @@ $(noteViewReady);
 				<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
     				<li><a href="#" class="dropitem" data-id="<%= @mine.id if @mine %>" data-where="A">Mine</a></li>
     				<% @others.each do |key, value| %>
-    				<li><a href="#" class="dropitem" data-id="<%= @key %>" data-where="A"><%= value %></a></li>
+    				<li><a href="#" class="dropitem" data-id="<%= key %>" data-where="A"><%= value %></a></li>
     				<% end if @others %>
   				</ul>
 			</div>
@@ -30,7 +30,7 @@ $(noteViewReady);
 			<div class="dropdown centerdrop">
 				<a class="dropdown-toggle" data-toggle="dropdown" href="#" id="ddB">
 					<% if @others && @others.length > 0 %>
-					<%= @others[0].id %>
+					<%= @others.first[0] %>
 					<% else %>
 					No other notes
 					<% end %>
@@ -39,7 +39,7 @@ $(noteViewReady);
 				 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
     				<li><a href="#" class="dropitem" data-id="<%= @mine.id if @mine %>" data-where="B">Mine</a></li>
     				<% @others.each do |key, value| %>
-    				<li><a href="#" class="dropitem" data-id="<%= @key %>" data-where="B"><%= value %></a></li>
+    				<li><a href="#" class="dropitem" data-id="<%= key %>" data-where="B"><%= value %></a></li>
     				<% end if @others %>
   				</ul>
 			</div>
@@ -66,6 +66,7 @@ $(noteViewReady);
 
 	<div class="span6">
 		<div class="pView" id="noteB">
+			
 		</div>
 	</div>
 </div>
